--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "@vue/cli-service": "^3.9.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-core": "7.0.0-bridge.0",
+    "file-loader": "^4.1.0",
     "lint-staged": "^8.1.5",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.1.0",
     "ts-jest": "^23.0.0",
     "typemoq": "^2.1.0",
     "typescript": "^3.4.3",
+    "url-loader": "^2.1.0",
     "vue-template-compiler": "^2.6.10",
     "worker-loader": "^2.0.0"
   },
