--- a/package.json
+++ b/package.json
@@ -1,59 +1,62 @@
 {
   "name": "tron",
   "version": "0.1.0",
-  "private": true,
+  "license": "MIT",
+  "description": "tron",
+  "repository": "git@github.com:NikolaLohinski/rustron.git",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "test": "vue-cli-service test:unit --silent",
-    "test:watch": "npm run test -- --watch",
-    "test:verbose": "vue-cli-service test:unit",
-    "test:watch,verbose": "npm run test:verbose -- --watch"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.19",
-    "@fortawesome/free-brands-svg-icons": "^5.9.0",
-    "@fortawesome/free-regular-svg-icons": "^5.9.0",
-    "@fortawesome/free-solid-svg-icons": "^5.9.0",
-    "@fortawesome/vue-fontawesome": "^0.1.6",
-    "core-js": "^2.6.5",
-    "vue": "^2.6.10",
-    "vue-class-component": "^7.0.2",
-    "vue-property-decorator": "^8.1.0",
-    "vuex": "^3.0.1"
+    "start": "./node_modules/.bin/webpack-dev-server -d",
+    "build": "./node_modules/.bin/webpack --mode production",
+    "lint": "./node_modules/.bin/tslint --project . --fix",
+    "jest": "./node_modules/.bin/jest",
+    "test": "npm run jest"
   },
   "devDependencies": {
-    "@types/jest": "^23.1.4",
-    "@types/node": "^12.6.6",
-    "@vue/cli-plugin-babel": "^3.9.0",
-    "@vue/cli-plugin-typescript": "^3.9.0",
-    "@vue/cli-plugin-unit-jest": "^3.9.0",
-    "@vue/cli-service": "^3.9.0",
-    "@vue/test-utils": "1.0.0-beta.29",
-    "babel-core": "7.0.0-bridge.0",
-    "file-loader": "^4.1.0",
-    "lint-staged": "^8.1.5",
-    "node-sass": "^4.9.0",
-    "sass-loader": "^7.1.0",
-    "ts-jest": "^23.0.0",
-    "typemoq": "^2.1.0",
-    "typescript": "^3.4.3",
-    "url-loader": "^2.1.0",
-    "vue-template-compiler": "^2.6.10",
-    "worker-loader": "^2.0.0"
+    "@babel/core": "7.5.4",
+    "@types/jest": "24.0.17",
+    "@types/node": "12.7.1",
+    "@types/webpack-env": "1.14.0",
+    "@wasm-tool/wasm-pack-plugin": "0.1.6",
+    "autoprefixer": "9.6.1",
+    "babel-loader": "8.0.6",
+    "babel-plugin-syntax-dynamic-import": "6.18.0",
+    "css-loader": "3.2.0",
+    "file-loader": "4.2.0",
+    "html-webpack-plugin": "3.2.0",
+    "husky": "^3.0.3",
+    "jest": "24.8.0",
+    "jest-serializer-vue": "2.0.2",
+    "jest-transform-stub": "2.0.0",
+    "jest-watch-typeahead": "0.3.1",
+    "node-sass": "4.12.0",
+    "postcss-loader": "3.0.0",
+    "sass-loader": "7.2.0",
+    "ts-jest": "24.0.2",
+    "ts-loader": "6.0.4",
+    "tslint": "5.18.0",
+    "typemoq": "2.1.0",
+    "typescript": "3.5.3",
+    "url-loader": "2.1.0",
+    "vue-class-component": "7.1.0",
+    "vue-jest": "3.0.4",
+    "vue-loader": "15.7.1",
+    "vue-property-decorator": "8.2.1",
+    "vue-style-loader": "4.1.2",
+    "vue-template-compiler": "2.6.10",
+    "webpack": "4.27.1",
+    "webpack-cli": "3.1.2",
+    "webpack-dev-server": "3.8.0"
   },
-  "gitHooks": {
-    "pre-commit": "lint-staged"
+  "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "1.2.21",
+    "@fortawesome/free-solid-svg-icons": "5.10.1",
+    "@fortawesome/vue-fontawesome": "0.1.6",
+    "vue": "2.6.10",
+    "vuex": "3.1.1"
   },
-  "lint-staged": {
-    "*.ts": [
-      "vue-cli-service lint",
-      "git add"
-    ],
-    "*.vue": [
-      "vue-cli-service lint",
-      "git add"
-    ]
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint && npm t"
+    }
   }
 }
