--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "./node_modules/.bin/webpack --mode production",
     "lint": "./node_modules/.bin/tslint --project . --fix",
     "jest": "./node_modules/.bin/jest",
-    "test": "npm run jest"
+    "test": "npm run jest",
+    "test:watch": "npm run jest -- --watch"
   },
   "devDependencies": {
     "@babel/core": "7.5.4",
@@ -23,7 +24,7 @@
     "css-loader": "3.2.0",
     "file-loader": "4.2.0",
     "html-webpack-plugin": "3.2.0",
-    "husky": "^3.0.3",
+    "husky": "3.0.3",
     "jest": "24.8.0",
     "jest-serializer-vue": "2.0.2",
     "jest-transform-stub": "2.0.0",
