--- a/crates/bot/Cargo.toml
+++ b/crates/bot/Cargo.toml
@@ -13,6 +13,7 @@ console_error_panic_hook = { version = "0.1.5", optional = true }
 wee_alloc = { version = "0.4.2", optional = true }
 web-sys = { version = "0.3", features = ["console"] }
 serde_json = "1.0"
+rand = { version="0.7.0", features = ["small_rng", "wasm-bindgen"] }
 
 [features]
 default-features = ["console_error_panic_hook"]
