--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-plugin-syntax-dynamic-import": "6.18.0",
     "css-loader": "3.2.0",
     "file-loader": "4.2.0",
+    "golang-wasm-async-loader": "0.4.1",
     "html-webpack-plugin": "3.2.0",
     "husky": "3.0.3",
     "jest": "24.8.0",
@@ -56,7 +57,6 @@
     "vuex": "3.1.1"
   },
   "husky": {
-    "hooks": {
-    }
+    "hooks": {}
   }
 }
