--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "autoprefixer": "9.6.1",
     "babel-loader": "8.0.6",
     "babel-plugin-syntax-dynamic-import": "6.18.0",
+    "chart.js": "^2.8.0",
     "css-loader": "3.2.0",
     "file-loader": "4.2.0",
     "golang-wasm-async-loader": "0.4.1",
@@ -32,12 +33,14 @@
     "node-sass": "4.12.0",
     "postcss-loader": "3.0.0",
     "sass-loader": "7.2.0",
+    "sweet-modal-vue": "2.0.0",
     "ts-jest": "24.0.2",
     "ts-loader": "6.0.4",
     "tslint": "5.18.0",
     "typemoq": "2.1.0",
     "typescript": "3.5.3",
     "url-loader": "2.1.0",
+    "vue-chartkick": "^0.5.2",
     "vue-class-component": "7.1.0",
     "vue-jest": "3.0.4",
     "vue-loader": "15.7.1",
