--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "test": "npm run jest",
     "test:watch": "npm run jest -- --watch"
   },
-  "devDependencies": {
+  "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "1.2.21",
+    "@fortawesome/free-solid-svg-icons": "5.10.1",
+    "@fortawesome/vue-fontawesome": "0.1.6",
     "@babel/core": "7.5.4",
     "@types/jest": "24.0.17",
     "@types/node": "12.7.1",
@@ -21,7 +24,7 @@
     "autoprefixer": "9.6.1",
     "babel-loader": "8.0.6",
     "babel-plugin-syntax-dynamic-import": "6.18.0",
-    "chart.js": "^2.8.0",
+    "chart.js": "2.8.0",
     "css-loader": "3.2.0",
     "file-loader": "4.2.0",
     "golang-wasm-async-loader": "0.4.1",
@@ -40,7 +43,7 @@
     "typemoq": "2.1.0",
     "typescript": "3.5.3",
     "url-loader": "2.1.0",
-    "vue-chartkick": "^0.5.2",
+    "vue-chartkick": "0.5.2",
     "vue-class-component": "7.1.0",
     "vue-jest": "3.0.4",
     "vue-loader": "15.7.1",
@@ -49,12 +52,7 @@
     "vue-template-compiler": "2.6.10",
     "webpack": "4.27.1",
     "webpack-cli": "3.1.2",
-    "webpack-dev-server": "3.8.0"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "1.2.21",
-    "@fortawesome/free-solid-svg-icons": "5.10.1",
-    "@fortawesome/vue-fontawesome": "0.1.6",
+    "webpack-dev-server": "3.8.0",
     "vue": "2.6.10",
     "vuex": "3.1.1"
   }
