--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "tron",
   "repository": "git@github.com:NikolaLohinski/rustron.git",
   "scripts": {
+    "postinstall": "sh post-install.sh",
     "start": "./node_modules/.bin/webpack-dev-server -d",
     "build": "./node_modules/.bin/webpack --mode production",
     "lint": "./node_modules/.bin/tslint --project . --fix",
@@ -13,10 +14,10 @@
     "test:watch": "npm run jest -- --watch"
   },
   "dependencies": {
+    "@babel/core": "7.5.4",
     "@fortawesome/fontawesome-svg-core": "1.2.21",
     "@fortawesome/free-solid-svg-icons": "5.10.1",
     "@fortawesome/vue-fontawesome": "0.1.6",
-    "@babel/core": "7.5.4",
     "@types/jest": "24.0.17",
     "@types/node": "12.7.1",
     "@types/webpack-env": "1.14.0",
@@ -24,6 +25,7 @@
     "autoprefixer": "9.6.1",
     "babel-loader": "8.0.6",
     "babel-plugin-syntax-dynamic-import": "6.18.0",
+    "c-wasm-loader": "^1.0.0-alpha.2",
     "chart.js": "2.8.0",
     "css-loader": "3.2.0",
     "file-loader": "4.2.0",
@@ -43,6 +45,7 @@
     "typemoq": "2.1.0",
     "typescript": "3.5.3",
     "url-loader": "2.1.0",
+    "vue": "2.6.10",
     "vue-chartkick": "0.5.2",
     "vue-class-component": "7.1.0",
     "vue-jest": "3.0.4",
@@ -50,10 +53,9 @@
     "vue-property-decorator": "8.2.1",
     "vue-style-loader": "4.1.2",
     "vue-template-compiler": "2.6.10",
+    "vuex": "3.1.1",
     "webpack": "4.27.1",
     "webpack-cli": "3.1.2",
-    "webpack-dev-server": "3.8.0",
-    "vue": "2.6.10",
-    "vuex": "3.1.1"
+    "webpack-dev-server": "3.8.0"
   }
 }
